--- a/mokkisofta/mokkisofta.csproj
+++ b/mokkisofta/mokkisofta.csproj
@@ -46,6 +46,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AsiakaatDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>AsiakaatDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Tietoa.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -129,6 +134,17 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="AsiakaatDataSet.xsc">
+      <DependentUpon>AsiakaatDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="AsiakaatDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>AsiakaatDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="AsiakaatDataSet.xss">
+      <DependentUpon>AsiakaatDataSet.xsd</DependentUpon>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
