--- a/mokkisofta/Properties/Settings.settings
+++ b/mokkisofta/Properties/Settings.settings
@@ -8,7 +8,7 @@
   &lt;ConnectionString&gt;Data Source=DESKTOP-4I7QG7U\SQLEXPRESS;Initial Catalog=vp;User ID=ryhma13;Password=ryhma13&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=DESKTOP-4I7QG7U\SQLEXPRESS;Initial Catalog=vp;User ID=ryhma13;Password=ryhma13</Value>
+      <Value Profile="(Default)">Data Source=DESKTOP-4I7QG7U\SQLEXPRESS;Initial Catalog=vp;User ID=sa;Password=Kissa123!</Value>
     </Setting>
   </Settings>
 </SettingsFile>
